force-app/main/default/objects/BLI_Impact__mdt/BLI_Impact__mdt.object-meta.xml
<CustomObject>
    <description>To know which BookingLineItem type impacts Gross,Net and Commisionable Total</description>
    <label>BLI Impact</label>
    <pluralLabel>BLI Impacts</pluralLabel>
</CustomObject>