force-app/main/default/objects/BLI_Impact__mdt/fields/Impacts_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Commissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impacts Commissions</label>
    <type>Checkbox</type>
</CustomField>