force-app/main/default/objects/BLI_Impact__mdt/listViews/BLI_view.listView-meta.xml
<ListView>
    <fullName>BLI_view</fullName>
    <columns>Adjustment_Type__c</columns>
    <columns>Impacts_Gross_Bookings__c</columns>
    <columns>Impacts_Net_Bookings__c</columns>
    <columns>Impacts_Commissions__c</columns>
    <filterScope>Everything</filterScope>
    <label>BLI view</label>
</ListView>